[package]
name = "boing-bevy"
version = "0.1.0"
authors = ["Krzysztof Hrynczenko <jeniopy@gmail.com>"]
edition = "2018"

repository = "https://github.com/khrynczenko/boing-bevy"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.1.3"
